Cambios en Vent Ppal y funcionalidad